# aspnetcore/src/mynhs/wwwroot/swagger-original.json
@@ -2234,6 +2234,14 @@
           "$ref" : "#/components/schemas/SubmissionStatusBaseWithLocation"
         } ]
       },
+      "SubmissionData" : {
+        "type" : "object",
+        "oneOf" : [ {
+          "$ref" : "#/components/schemas/Observation"
+        }, {
+          "$ref" : "#/components/schemas/DigitalHealthCheckRequestAll"
+        } ]
+      },
       "SubmissionStatusBase" : {
         "type" : "object",
         "properties" : {
@@ -2254,11 +2262,11 @@
             "format" : "date-time"
           },
           "SubmittedData" : {
-            "type" : "object"
+            "$ref" : "#/components/schemas/SubmissionData"
           }
         },
         "example" : {
-          "SubmittedData" : { },
+          "SubmittedData" : "",
           "SubmittedByUserId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
           "DateSubmissionCreated" : "2000-01-23T04:56:07.000+00:00",
           "SubmittedByAppId" : "046b6c7f-0b8a-43b9-b35d-6489e6daee91",
